<resources>
    <string name="app_name">NewDialer</string>

    <string-array name="dialer_title_tips">
        <item>All Collects</item>
        <item>Recent Call</item>
        <item>All Contacts</item>
    </string-array>

    <string name="dialer_main_favorite_empty">No one is on your speed dial yet</string>
    <string name="dialer_main_contact_empty">You don\'t have any contacts yet</string>
    <string name="dialer_main_recent_empty">Your call history is empty</string>

    <string name="base_loading_data_tips">loading...</string>
    <string name="dialer_recent_item_call_not_save">Not saved</string>
    <string name="add_contact_button_save">SAVE</string>
    <string name="add_contact_button_cancel">CANCEL</string>

    <string name="add_contact_name">Name</string>
    <string name="add_contact_phone">Phone</string>
    <string name="add_contact_message">Message</string>
    <string name="add_contact_mail">Mail</string>
    <string name="add_contact_video">Video</string>

    <string name="add_contact_phone_format">call.%s</string>
    <string name="add_contact_message_format">message.%s</string>
    <string name="add_contact_mail_format">mail.%s</string>
    <string name="add_contact_video_format">video.%s</string>

    <string name="add_contact_input_name_tips">name cannot be empty</string>

    <string name="show_contact_info_edit">Edit</string>

    <string name="show_contact_info_share">share</string>
    <string name="show_contact_info_favorite">favorite</string>
    <string name="show_contact_info_block">block</string>

    <string name="search_layout_tips">search</string>
    <string name="block">BlockChain</string>
    <string name="tradition">Tradition</string>
    <string name="plate_input_tips_call">call.</string>

    <string name="plate_input_hint">please enter</string>
    <string name="plate_inout_not_null">the number cannot be empty</string>
    <string name="plate_call_line">on the line</string>

    <string name="poor_network">poor network environment</string>

    <string name="other_person_phone">the other person is on the phone</string>
</resources>
